feature/use-idea-to-run-project